# monitor-core

./: Makefile.am  configure.ac
gdistcc/: Makefile.am  cmdline.c  cmdline.h  cmdline.sh  gdistcc.c
